k3s/manifests/notifications/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notifications-service
  namespace: notifications
  labels:
    app: notifications-api
spec:
  selector:
    app: notifications-api
  ports:
  - name: http
    port: 80
    targetPort: 3560
    protocol: TCP
  type: ClusterIP
